Set up continueous photo capture
Incredibly buggy. Will stop after 81 frames for some reason!?!?!